# roleprint

./: .env.example  .gitignore  Dockerfile  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_subscribers.py  0003_drop_subscribers.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.js
dashboard/src/: App.jsx  index.css  utils.js
dashboard/src/api/: client.js
dashboard/src/components/: ConnectionBanner.jsx  EmptyState.jsx  ErrorBoundary.jsx  ErrorState.jsx  ExportButton.jsx  Layout.jsx  Sidebar.jsx  Skeleton.jsx
dashboard/src/context/: AppContext.jsx
dashboard/src/hooks/: useApi.js  useFetch.js  useWindowWidth.js
dashboard/src/pages/: About.jsx  Comparison.jsx  Overview.jsx  Postings.jsx  Sentiment.jsx  SkillGap.jsx  Trends.jsx
data/: sentiment_labels.csv  skill_labels.csv
scripts/: evaluate_sentiment.py  evaluate_topics.py  generate_trend_report.py  seed_demo_data.py  test_email.py  test_pipeline.py
src/roleprint/api/: cache.py  deps.py  main.py  schemas.py
src/roleprint/db/: models.py  queries.py  session.py
src/roleprint/nlp/: __init__.py  ab_test.py  cleaner.py  ner.py  pipeline.py  sentiment.py  skill_extractor.py  skills_vocab.json  topic_model.py  trends.py
src/roleprint/scheduler/: email_template.html  (+2 more)
tests/: test_api.py  test_models.py  test_nlp.py  test_scheduler.py  test_scrapers.py  test_trends.py
tests/fixtures/: adzuna_response.json  reed_search.html  remoteok_api.json  sample_jobs.py
(+15 files in other folders)
