[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "roleprint"
version = "0.1.0"
description = "NLP-powered job market analytics tool"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.9",

    # NLP
    "spacy>=3.7.0",
    "nltk>=3.8.1",
    "scikit-learn>=1.4.0",
    "bertopic>=0.16.0",

    # Scraping
    "playwright>=1.44.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",

    # Scheduling & email
    "apscheduler>=3.10.4",
    "jinja2>=3.1.4",
    "sendgrid>=6.11.0",
    "email-validator>=2.2.0",

    # Data
    "pandas>=2.2.0",
    "numpy>=1.26.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",     # for TestClient
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
roleprint = "roleprint.api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/roleprint"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = false
ignore_missing_imports = true
